--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -4,7 +4,7 @@ gem 'rails', '~> 3.0.3'
 gem 'devise', '~> 1.1'
 gem 'paperclip', '~> 2.3'
 gem 'acts-as-taggable-on'
-gem 'rails_admin'
+gem 'rails_admin', :git => 'git://github.com/sferik/rails_admin.git'
 gem 'rails_admin_tag_list_field', :path => '../../'
 
 # Bundle gems for the local environment. Make sure to
@@ -34,3 +34,4 @@ group :development, :test do
     end
   end
 end
+
