Gem tottaly revised. rails_admin_tag_list_field renamed to rails_admin_tag_list. Version bumped to 0.1.0.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-pkg
-Gemfile.lock
-spec/dummy/tmp/
-spec/dummy/log
+.bundle/
+log/*.log
+pkg/
+test/dummy/db/*.sqlite3
+test/dummy/log/*.log
+test/dummy/tmp/
+test/dummy/.sass-cache
